--- a/src/Page12.css
+++ b/src/Page12.css
@@ -49,7 +49,7 @@
   max-width: 100%;
   text-align: center;
   color: white;
-  font-size: 3.5rem;
+  font-size: 2.5rem;
   font-weight: 400;
   font-family: 'Cambo', serif;
   line-height: 1.3;
@@ -92,8 +92,8 @@
 }
 
 .page12-image {
-  width: 620px;
-  max-width: 100%;
+  width: 505px;
+  /* max-width: 100%; */
   border-radius: 12px;
   object-fit: contain;
   border: none !important;  /* Removed blue border */
