--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -19,5 +23,3 @@ code {
 .heading-cambo {
   font-family: 'Cambo', serif;
 }
-
-
