--- a/src/Page4.css
+++ b/src/Page4.css
@@ -1,7 +1,7 @@
 .page4-wrapper {
   position: relative;
   width: 100%;
-  padding: 80px 0;
+  padding: 40px 0;
   overflow: hidden;
   font-family: "Inter", sans-serif;
   display: flex;
@@ -17,7 +17,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("./assets/page1bg.png");
+  /* background-image: url("./assets/page1bg.png"); */
   background-size: contain;
   background-repeat: repeat;
   opacity: 0.3;
@@ -36,7 +36,7 @@
   justify-content: center;
   gap: 22px;
   /* Increased gap like reference */
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 .page4-header-text {
@@ -79,8 +79,8 @@
 
 /* regular section images */
 .section-image {
-  width: 78%;
-  max-width: 950px;
+  width: 90%;
+  max-width: 1100px;
   display: block;
 }
 
